clusters/k4/kubernetes/apps/database/postgres/cnpg/netpol.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: postgres-cnpg
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: postgres
  ingress:
    # KubeApi
    - fromEntities:
        - kube-apiserver
    # VMAgent
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: vmagent
            app.kubernetes.io/component: monitoring
      toPorts:
        - ports:
            - port: "9187"
              protocol: TCP
  egress:
    # KubeApi
    - toEntities:
        - kube-apiserver
    # Garage
    - toCIDR:
        - ${SECRET_GARAGE_IP}/32
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: postgres-cnpg-pooler-rw
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: postgres
      cnpg.io/podRole: pooler
  ingress:
    - fromEndpoints:
        - matchLabels:
            egress.samoth.eu/database: allow
      toPorts: &port
        - ports:
            - port: "5432"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            gateway.networking.k8s.io/gateway-name: envoy-internal
      toPorts: *port
